[package]
name = "vox-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
rayon = "1.7.0"
ordered-float = "3.1.0"
image = "0.24.4"

vox-stl = { path = "../vox-stl" }
vox-fwd = { path = "../vox-fwd" }
