[package]
name = "vox-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
nalgebra = "0.31.1"
nalgebra-glm = "0.17.0"
rand = "0.8.5"
ordered-float = "3.1.0"
minifb = "0.24.0"
rayon = "1.7.0"

vox-graphics = { "path"="../vox-graphics" }
vox-fwd = { path = "../vox-fwd" }
vox-stl = { path = "../vox-stl" }
